[gd_scene load_steps=13 format=1]

[ext_resource path="res://ship/shield.gd" type="Script" id=1]
[ext_resource path="res://ship/shield.tex" type="Texture" id=2]
[ext_resource path="res://ship/black_hole1.tex" type="Texture" id=3]
[ext_resource path="res://ship/black_hole2.tex" type="Texture" id=4]
[ext_resource path="res://ship/black_hole3.tex" type="Texture" id=5]
[ext_resource path="res://ship/black_hole4.tex" type="Texture" id=6]
[ext_resource path="res://ship/transparent.tex" type="Texture" id=7]
[ext_resource path="res://enemies/valkyrie/valkyrie_arrow.tex" type="Texture" id=8]
[ext_resource path="res://enemies/draug/slime_projectile01.tex" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -13, -2, 13, -2, 16, -1, 18, 1, 18, 4, -18, 4, -18, 1, -16, -1 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "shield",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "hole",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 7 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "arrow",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "slime",
"speed": 5.0
} ]

[node name="shield" type="Node2D"]

[node name="body" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 0, -36 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="body"]

frames = SubResource( 2 )
animation = "shield"
playing = true

[node name="shoot_position" type="AnimatedSprite" parent="body"]

transform/pos = Vector2( 0, -8 )
frames = SubResource( 3 )
animation = "empty"

[node name="extra_mjolnir_timer" type="Timer" parent="body"]

process_mode = 1
wait_time = 20.0
one_shot = false
autostart = false

[node name="magnet_timer" type="Timer" parent="body"]

process_mode = 1
wait_time = 20.0
one_shot = false
autostart = false

[node name="absorb_timer" type="Timer" parent="body"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="hole_timer" type="Timer" parent="body"]

process_mode = 1
wait_time = 20.0
one_shot = false
autostart = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="body"]

build_mode = 0
polygon = Vector2Array( -13, -2, 13, -2, 16, -1, 18, 1, 18, 4, -18, 4, -18, 1, -16, -1 )
shape_range = Vector2( 0, 0 )
trigger = false


